# simple_stomp_server

./: .gitignore  autogen.sh  configure.ac
src/: Makefile.am  stomp.l  stomp.y  stompd.c  stompd.h
